addition of Icons in cardview

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -98,7 +98,7 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-          android:src="@drawable/additem"
+          android:src="@drawable/add_items"
           android:layout_margin="4dp"
           android:padding="8dp"
           android:contentDescription="@string/app_name"/>
@@ -112,6 +112,208 @@
           android:textStyle="bold"/>
 
       </LinearLayout>
+
+      <LinearLayout
+          android:id="@+id/add_customer"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/white_background"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:padding="15dp"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/addItems"
+          app:layout_constraintTop_toTopOf="parent"
+          >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/add_customer"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Customer"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+      </LinearLayout>
+      <LinearLayout
+          android:id="@+id/delete_item"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/white_background"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:padding="15dp"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toStartOf="@id/add_customer"
+          app:layout_constraintTop_toBottomOf="@id/addItems"
+          >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/delete_items"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete Items"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+      </LinearLayout>
+      <LinearLayout
+          android:id="@+id/delete_customer"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/white_background"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:padding="15dp"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@id/addItems"
+          app:layout_constraintTop_toBottomOf="@id/add_customer"
+          >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/update_items"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update Items"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+      </LinearLayout>
+      <LinearLayout
+          android:id="@+id/edit_items"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/white_background"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:padding="15dp"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toStartOf="@id/add_customer"
+          app:layout_constraintTop_toBottomOf="@id/delete_item"
+          >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/edit_users"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit User"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+      </LinearLayout>
+      <LinearLayout
+          android:id="@+id/edit_customer"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/white_background"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:padding="15dp"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@id/addItems"
+          app:layout_constraintTop_toBottomOf="@id/delete_customer"
+          >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/delete_users"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete User"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+
+      </LinearLayout>
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/card"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/card_layout"
+          android:padding="20dp"
+          app:layout_constraintEnd_toEndOf="@id/add_customer"
+          app:layout_constraintStart_toStartOf="@id/edit_items"
+          app:layout_constraintTop_toBottomOf="@id/edit_items"
+          >
+        <TextView
+            android:id="@+id/cardText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_background"
+            android:paddingStart="8dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="2dp"
+            android:text="walmart !!!"
+            android:textColor="@color/purple_500"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
+        <ImageView
+            android:id="@+id/card_img"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/app_name"
+            app:layout_constraintBottom_toBottomOf="@id/cardText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/cardText"
+            android:src="@drawable/ic_baseline_local_shipping_24"
+            app:tint="@color/black" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/card_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="6dp"
+            android:text="@string/card_text"/>
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
   </ScrollView>
